Support a built-in feature for calculating SDM Data CRC (SPN 9383), which can be used to verify the integrity of the Safety Header Message.

--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
 name=SharkJ1939
-version=1.0.0
+version=1.0.1
 author=Jaemann Yeh <jaeyeh16@gmail.com>
 maintainer=Jaemann Yeh <jaeyeh16@gmail.com>
 sentence=J1939 packet sniffer library
-paragraph=J1939 packet sniffer library
+paragraph=SharkJ1939 is a communication library that allows sniffing and displaying of J1939 CAN messages using the MCP2515 driver. The library offers a built-in feature for calculating SDM Data CRC (SPN 9383), which can be used to verify the integrity of the Safety Header Message. SharkJ1939 is a compact program, but its name is inspired by Wireshark.
 category=Communication
 url=https://github.com/jaemannyeh/SharkJ1939
 architectures=*
